# libshyake-win32

./: CMakeLists.txt
.github/workflows/: build.yml
docs/: UPSTREAM.md  XP-BUILD.md
include/: shyake.h
patches/: liboqs-0.15.0-rtlgenrandom.patch  mbedtls-3.6-rtlgenrandom.patch
powershell/: README.md  Shyake.psm1
scripts/: build-curl.sh  build-liboqs.sh  build-mbedtls.sh  find-sse-exe.sh  find-sse.sh
src/: account.c  crypto_ops.c  enc_dec.c  known_hosts.c  lib_internal.h  libshyake.c  mail.c  network.c  passphrase.c  shyake_crypto.c  shyake_crypto.h
tests/: test_crypto.c  test_e2e.c  test_interop.c
